refactor: インスペクションの警告に対応